Fix secondary nav selected items marker being mis-aligned (#13792)

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -651,10 +651,6 @@ $meganav-height: 3rem;
           @media (max-width: $breakpoint-medium) {
             padding-left: $row-margin-small;
           }
-
-          &::before {
-            left: $row-margin-small;
-          }
         }
       }
     }
